sidebar header fixed on mobile for better UX

--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -6,4 +6,8 @@
   textarea {
     resize: none;
   }
+
+  @include sm-down() {
+    margin-top: 45px;
+  }
 }
