--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -1,3 +1,20 @@
 .sidebar {
   overflow-y: scroll;
+
+  @include sm-down() {
+
+    &--header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      padding: 20px;
+      background-color: var(--color-primary-dark);
+      z-index: 10;
+    }
+
+    &--body {
+      margin-top: 60px;
+    }
+  }
 }
